[gd_scene load_steps=3 format=1]

[ext_resource path="res://scenes/main.gd" type="Script" id=1]
[ext_resource path="res://gui/changeable_module_property.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="stats" type="HBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 40.0
custom_constants/separation = 20
alignment = 2

[node name="visitor_label" type="Label" parent="stats"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 798.0
margin/top = 13.0
margin/right = 940.0
margin/bottom = 27.0
text = "124 tägliche Besucher"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VSeparator" type="VSeparator" parent="stats"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 960.0
margin/top = 0.0
margin/right = 963.0
margin/bottom = 40.0

[node name="meta_cycle_label" type="Label" parent="stats"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 983.0
margin/top = 13.0
margin/right = 1024.0
margin/bottom = 27.0
text = "Tag 41"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="left_panel" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 56.0
margin/right = 178.0
margin/bottom = 547.0
alignment = 0

[node name="resources" type="VBoxContainer" parent="left_panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 167.0
margin/bottom = 240.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="left_panel/resources"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 167.0
margin/bottom = 14.0
alignment = 0

[node name="Label" type="Label" parent="left_panel/resources/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 71.0
margin/bottom = 14.0
text = "1.203 Uron"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="left_panel/resources/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 0.0
margin/right = 75.0
margin/bottom = 14.0
stretch_mode = 3

[node name="Label 3" type="Label" parent="left_panel/resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 18.0
margin/right = 167.0
margin/bottom = 32.0
text = "85/100 Energy"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 2" type="Label" parent="left_panel/resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 36.0
margin/right = 167.0
margin/bottom = 50.0
text = "12/13 Aliensklaven"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 4" type="Label" parent="left_panel/resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 54.0
margin/right = 167.0
margin/bottom = 68.0
text = "15 / 24 Spaceweed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 5" type="Label" parent="left_panel/resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 72.0
margin/right = 167.0
margin/bottom = 86.0
text = "8/10 Lagerraum"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label 6" type="Label" parent="left_panel/resources"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 90.0
margin/right = 167.0
margin/bottom = 104.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="left_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 244.0
margin/right = 167.0
margin/bottom = 247.0

[node name="message_log" type="RichTextLabel" parent="left_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 251.0
margin/right = 167.0
margin/bottom = 491.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="spacestation_overview" type="PanelContainer" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 177.0
margin/top = 61.0
margin/right = -781.0
margin/bottom = -513.0

[node name="Label" type="Label" parent="spacestation_overview"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 239.0
margin/right = 637.0
margin/bottom = 253.0
text = "Spacestation Overview"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="right_panel" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 837.0
margin/top = 67.0
margin/right = 1006.0
margin/bottom = 488.0
alignment = 0

[node name="module_name" type="Label" parent="right_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 169.0
margin/bottom = 14.0
text = "module_name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="right_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 169.0
margin/bottom = 21.0

[node name="module_properties" type="VBoxContainer" parent="right_panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 169.0
margin/bottom = 113.0
alignment = 0

[node name="property" parent="right_panel/module_properties" instance=ExtResource( 2 )]

[node name="property 2" parent="right_panel/module_properties" instance=ExtResource( 2 )]

margin/top = 46.0
margin/bottom = 88.0

[node name="next_day_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 832.0
margin/top = 506.0
margin/right = 1001.0
margin/bottom = 558.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Nächster Tag"
flat = false

[connection signal="pressed" from="next_day_button" to="." method="_on_next_day_button_pressed"]


